--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^3.3.2",
     "opus": "^0.0.0",
     "opusscript": "^0.0.8",
-    "prism-media": "^1.3.5"
+    "prism-media": "^1.3.5",
+    "puppeteer": "^24.27.0"
   }
 }
