--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
+    "axios": "^1.13.1",
     "discord.js": "^14.22.1",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "mysql2": "^3.15.1",
     "nanoid": "^5.1.6",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "opus": "^0.0.0",
     "opusscript": "^0.0.8",
     "prism-media": "^1.3.5",
-    "puppeteer": "^24.27.0"
+    "puppeteer": "^24.27.0",
+    "youtube-transcript-plus": "^1.1.1"
   }
 }
