--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "axios": "^1.13.1",
+    "cron-parser": "^5.4.0",
     "discord.js": "^14.22.1",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
